# Copyright © SixtyFPS GmbH <info@slint-ui.com>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-commercial

[package]
name = "printerdemo_mcu"
version = "0.3.4"
authors = ["Slint Developers <info@slint-ui.com>"]
edition = "2021"
build = "build.rs"
publish = false
license = "GPL-3.0-only OR LicenseRef-Slint-commercial"

[[bin]]
path = "main.rs"
name = "printerdemo_mcu"

[features]
simulator = ["slint/renderer-winit-software", "slint/backend-winit", "slint/std"]
default = ["simulator"]

[dependencies]
slint = { version = "=0.3.4", default-features = false, features = ["compat-0-3-0"] }
mcu-board-support = { path = "../../mcu-board-support" }

[build-dependencies]
slint-build = { version = "=0.3.4" }

